--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,30 @@ version: '3'
 services:
   db:
     image: mysql:5.7
-    volumes:
-      - db_data:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: wordpress
       MYSQL_USER: root
       MYSQL_PASSWORD: root
+    volumes:
+      - db_data:/var/lib/mysql
 
   wordpress:
-    depends_on:
-      - db
-    image: wordpress:latest
+    image: wordpress
+    links:
+      - db:mysql
     ports:
-      - "8000:80"
+      - "80:80"
     restart: always
     environment:
-      WORDPRESS_DB_HOST: db:3306
+      # WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: root
+    working_dir: /var/www/html
     volumes:
       - ./php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
+      - ./:/var/www/html
 
 volumes:
   db_data:
