--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,39 @@
 version: '3'
 
 services:
-  db:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-    volumes:
-      - db_data:/var/lib/mysql
+  # db:
+  #   container_name: lms_db
+  #   image: mysql:5.7
+  #   restart: always
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #     MYSQL_DATABASE: wordpress
+  #     MYSQL_USER: root
+  #     MYSQL_PASSWORD: root
+  #   volumes:
+  #     - db_data:/var/lib/mysql
 
   wordpress:
+    container_name: lms_wordpress
     image: wordpress
-    links:
-      - db:mysql
+    # links:
+    #   - db:mysql
     ports:
-      - "80:80"
+      - "8000:80"
     restart: always
     environment:
       # WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_PASSWORD: root
+      # WORDPRESS_DB_NAME: wordpress
+      # WORDPRESS_DB_USER: root
+      # WORDPRESS_DB_PASSWORD: root
+      WORDPRESS_DB_HOST: being.design:3306
+      WORDPRESS_DB_NAME: johnc151_wp856
+      WORDPRESS_DB_USER: johnc151_dev
+      WORDPRESS_DB_PASSWORD: dKdL93Hsn445
     working_dir: /var/www/html
     volumes:
       - ./php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
       - ./:/var/www/html
 
-volumes:
-  db_data:
+# volumes:
+#   db_data:
